...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <org.wheelmap.android.view.SquareTextView
                android:id="@+id/dashboard_btn_in_der_naehe"
                style="@style/wheelmap_dasboard_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/start_btn_in_der_naehe"
                android:text="@string/dashboard_button_title_nearby" />

            <org.wheelmap.android.view.SquareTextView
                android:id="@+id/dashboard_btn_karte"
                style="@style/wheelmap_dasboard_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/start_btn_karte"
...
