<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <Button
        android:id="@+id/introduction_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/introduction_done_button_background"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/action_done"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18dp" />

    <LinearLayout
        android:id="@+id/indicator_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:orientation="horizontal"
        android:padding="15dp">
    </LinearLayout>
</LinearLayout>