...
                    android:text="@string/search_pick_map"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center_horizontal"/>
        </LinearLayout>

        <EditText
                android:id="@+id/search_keyword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:freezesText="true"
                android:hint="@string/search_hint_list"
                android:imeOptions="actionDone"
...
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_distance"
                    android:spinnerMode="dialog"/>
        </LinearLayout>

        <Button android:id="@+id/button_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_search"
                android:layout_marginTop="20dp"
                android:clickable="true"/>

...
