<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Menu -->

    <string name="menu_about">About</string>
    <string name="menu_directions">Navigation</string>
    <string name="menu_filter">Filter Settings</string>
    <string name="menu_mylocation">Move Here</string>
    <string name="menu_new_poi">Create New POI</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    <string name="menu_photo">Photo</string>
    <string name="poi_property_photos">Photos</string>
    <string name="menu_account">Account</string>
    <string name="menu_news">News</string>
    <string name="menu_refresh">Refresh</string>
</resources>