<?xml version="1.0" encoding="utf-8"?>
<!--
  #%L
  Wheelmap - App
  %%
  Copyright (C) 2011 - 2012 Michal Harakal - Michael Kroez - Sozialhelden e.V.
  %%
  Wheelmap App based on the Wheelmap Service by Sozialhelden e.V.
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS-IS" BASIS
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  #L%
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:id="@+id/fragment_root"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

                  >

    <ListView android:id="@android:id/list"
              style="@style/Scrollable.List" tools:listitem="@layout/item_list_pois"/>

    <ViewStub
            android:id="@android:id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout="@layout/empty"/>
    </LinearLayout>
</LinearLayout>