...
                    android:layout_gravity="center_vertical"/>

                <TextView style="@style/TitleBarTextNew.Subtitle"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/titlebar_backbutton"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_weight="0.1"
                android:clickable="true">

                <ImageView
...
