<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/feed"
		android:title="RSS Feed"
	/>
	<item android:id="@+id/location"
		android:title="Save Location"
	/>
	<item android:id="@+id/map"
		android:title="Show on Map"
	/>
</menu>