<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content" android:layout_height="match_parent"
              android:layout_gravity="center"
              android:gravity="center"
              android:layout_weight="1"
            android:textColor="@android:color/white" android:textStyle="bold"/>

    <ImageView
            android:id="@+id/switch_view"
            android:layout_width="wrap_content" android:layout_height="match_parent"
            android:src="@drawable/map_navbar_btn_map"/>
</LinearLayout>